# whisperlog

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/plans/: code-simplify-2026-04-27.md
prompts/: action_items.md  calendar_ics.md  coding_session.md  followup_email.md  meeting_notes.md  summarize.md
scripts/: demo-cloud.sh  demo.sh
src/ux570_transcribe/: __init__.py  agent.py  archive.py  cli.py  config.py  db.py  ingest.py  ledger.py  mcp_server.py  redact.py  secrets.py  transcribe.py  utils.py  watch.py
src/ux570_transcribe/enrich/: base.py  claude_api.py  claude_cli.py  ollama.py
src/whisperlog/: __init__.py  agent.py  archive.py  cli.py  config.py  db.py  ingest.py  ledger.py  mcp_server.py  redact.py  secrets.py  transcribe.py  utils.py  watch.py
src/whisperlog/enrich/: __init__.py  base.py  claude_api.py  claude_cli.py  ollama.py
tests/: conftest.py  test_archive_search.py  test_enrich_backends.py  test_ingest_dedup.py  test_redact.py  test_spend_cap.py  test_transcribe_outputs.py  test_utils_srt.py
