[project]
name = "whisperlog"
version = "0.1.0"
description = "Local-first audio transcription pipeline (Whisper + SQLite/FTS5, optional Claude/Ollama enrichment, MCP). Auto-detects Sony ICD-UX570; works with any audio source."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eric Baruch" }]

dependencies = [
    "faster-whisper>=1.0.3",
    "typer>=0.12.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "httpx>=0.27",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
cloud = [
    "anthropic>=0.40.0",
    "keyring>=25.0",
]
agent = [
    "anthropic>=0.40.0",
    "keyring>=25.0",
    "pyyaml>=6.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "mypy>=1.10",
]
all = [
    "anthropic>=0.40.0",
    "keyring>=25.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
]

[project.scripts]
whisperlog = "whisperlog.cli:app"
whisperlog-mcp = "whisperlog.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisperlog"]

[tool.hatch.build]
include = ["src/whisperlog/**", "prompts/**"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
# B008: typer requires `typer.Option(...)` in defaults — that's the documented pattern.
# RUF012: dataclass-style class-level defaults are fine here.
ignore = ["E501", "B008", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF059"]
"src/whisperlog/watch.py" = ["RUF059"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
